--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@
 	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+	gloo = "0.8"
+	js-sys = "0.3"
+	web-sys = { version = "0.3", features = ["EventTarget", "EventListener"] }
 	yew = { version = "0.20", features = ["csr"] }
