finish (hopefully) with macros :)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@
 
 [dependencies]
 	gloo = "0.8"
+	gloo-events = "0.1"
 	js-sys = "0.3"
 	web-sys = { version = "0.3", features = ["EventTarget", "EventListener"] }
 	yew = { version = "0.20", features = ["csr"] }
