--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
 	edition = "2021"
-	name = "yew-app"
+	name = "escapucina"
 	version = "0.1.0"
-
-	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 	gloo = "0.8"
