--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@
 	js-sys = "0.3"
 	lazy_static = "1"
 	paste = "1"
-	web-sys = { version = "0.3", features = ["EventTarget", "EventListener"] }
+	web-sys = { version = "0.3", features = ["EventTarget", "EventListener", "HtmlCollection"] }
 	yew = { version = "0.20", features = ["csr"] }
