--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@
 	js-sys = "0.3"
 	lazy_static = "1"
 	paste = "1"
+	strum = "0.25"
+	strum_macros = "0.25"
 	web-sys = { version = "0.3", features = ["EventTarget", "EventListener", "HtmlCollection"] }
 	yew = { version = "0.20", features = ["csr"] }
